--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,89 +1,110 @@
 <div class='form-wrap'>
   <div class='form-header'>
-    <h1 class='form-header-text'>
-      会員情報入力
-    </h1>
+    <h1 class='form-header-text'>会員情報入力</h1>
   </div>
+
+  <!-- エラー表示（中央寄せ） -->
+  <% if @user.errors.any? %>
+    <div class="error-alert" style="text-align: center; margin-bottom: 1em;">
+      <ul style="display: inline-block; text-align: left;">
+        <% @user.errors.full_messages.each do |msg| %>
+          <li class="error-message"><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-   
+
+    <!-- ニックネーム -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">ニックネーム</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_field :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+      <%= f.text_field :nickname, class:"input-default", placeholder:"例) furima太郎", maxlength:"40" %>
     </div>
+
+    <!-- メールアドレス -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">メールアドレス</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+      <%= f.email_field :email, class:"input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
     </div>
+
+    <!-- パスワード -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">パスワード</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
+      <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
       <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
     </div>
+
+    <!-- パスワード確認 -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">パスワード(確認)</label>
         <span class="indispensable">必須</span>
       </div>
-      <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+      <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力して下さい" %>
     </div>
+
+    <!-- 本人確認 -->
     <div class="form-group">
-      <p class='form-info-header'>
-        本人確認
-      </p>
+      <p class='form-info-header'>本人確認</p>
       <p class='form-info-text'>
         安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。
       </p>
     </div>
+
+    <!-- 名前 -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">お名前(全角)</label>
         <span class="indispensable">必須</span>
       </div>
-      <div class='input-name-wrap'>
-        <%= f.text_field :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-        <%= f.text_field :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+      <div class='input-name-wrap' style="display: flex; gap: 0.5em;">
+        <%= f.text_field :last_name, class:"input-name", placeholder:"例) 山田", style:"flex: 1;" %>
+        <%= f.text_field :first_name, class:"input-name", placeholder:"例) 陸太郎", style:"flex: 1;" %>
       </div>
     </div>
+
+    <!-- 名前カナ -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">お名前カナ(全角)</label>
         <span class="indispensable">必須</span>
       </div>
-      <div class='input-name-wrap'>
-        <%= f.text_field :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-        <%= f.text_field :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <div class='input-name-wrap' style="display: flex; gap: 0.5em;">
+        <%= f.text_field :last_name_kana, class:"input-name", placeholder:"例) ヤマダ", style:"flex: 1;" %>
+        <%= f.text_field :first_name_kana, class:"input-name", placeholder:"例) リクタロウ", style:"flex: 1;" %>
       </div>
     </div>
+
+    <!-- 生年月日 -->
     <div class="form-group">
       <div class='form-text-wrap'>
         <label class="form-text">生年月日</label>
         <span class="indispensable">必須</span>
       </div>
       <div class='input-birth-wrap'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :birth_date,
-                    class:'select-birth',
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 5),
-                    date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+        <%= f.date_select :birth_date,
+              start_year: 1930,
+              end_year: Time.current.year - 5,
+              use_month_numbers: true,
+              prompt: { day: '--', month: '--', year: '--' },
+              class: 'select-birth' %>
       </div>
     </div>
-    <div class='register-btn'>
-      <%= f.submit "会員登録" ,class:"register-red-btn" %>
+
+    <!-- 会員登録ボタン -->
+    <div class='register-btn' style="text-align: center;">
+      <%= f.submit "会員登録", class:"register-red-btn" %>
     </div>
+
   <% end %>
 </div>
