--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,7 +26,8 @@
     <div class="item-details-panel">
       <h1 class="item-name"><%= @item.name %></h1>
       <p class="item-price" id="item-price">
-        <%= number_to_currency(@item.price) %> <span class="tax-included">(税込)</span>
+        <%= number_to_currency(@item.price, unit: "¥", precision: 0, format: "%u%n") %>
+        <span class="tax-included">(税込)</span>
       </p>
 
       <%# カラー・サイズ選択 %>
